--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-google-recaptcha": "^2.1.5",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-phone-number-input": "^3.2.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
